Arreglar: no sobrescribir remixes si ya existen en el JSON

--- a/index.html
+++ b/index.html
@@ -1613,7 +1613,7 @@ const firebaseConfig = {
                 }
             }
             
-            if ((!packData.packages || packData.packages.length === 0) && packData.id) {
+            if ((!packData.packages || packData.packages.length === 0) && packData.id && !packData.remixes) {
                 const remixes = await fetchPackageContents(packData.id, depth);
                 packData.remixes = remixes;
             }
