--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@ Mobile UI
 
     <script>
         // URLs de API - ofuscadas
-        var _0x7a=[104,116,116,112,115,58,47,47,97,112,105,46];var _0x7b=[112,101,114,117,98,112,109,46,99,111,109];var _0x7c=[99,97,116,97,108,111,103,47,112,97,99,107,97,103,101,115,47];var _0x7d=[102,111,108,100,101,114,47];var _0x7e=[115,108,117,103,47];
+        var _0x7a=[104,116,116,112,115,58,47,47,97,112,105,46];var _0x7b=[112,101,114,117,98,112,109,46,99,111,109];var _0x7c=[99,97,116,97,108,111,103,47,112,97,99,107,97,103,101,115,47];
         var _0x7f=function(_0x3a){return String.fromCharCode.apply(null,_0x3a);};
-        var API_FOLDER=_0x7f(_0x7a)+_0x7f(_0x7b)+'/'+_0x7f(_0x7c)+_0x7d;
-        var API_SLUG=_0x7f(_0x7a)+_0x7f(_0x7b)+'/'+_0x7f(_0x7c)+_0x7e;
+        var API_FOLDER=_0x7f(_0x7a)+_0x7f(_0x7b)+'/'+_0x7f(_0x7c);
+        var API_SLUG=_0x7f(_0x7a)+_0x7f(_0x7b)+'/'+_0x7f(_0x7c);
         
         // Desactivar logs en producción (comentado para debugging)
         // if (window.location.hostname.indexOf('localhost') === -1 && window.location.hostname.indexOf('127.0.0.1') === -1) {
@@ -1583,7 +1583,7 @@ const firebaseConfig = {
 
         async function fetchPackageContents(packageId, depth = 0) {
             try {
-                const url = API_FOLDER + packageId;
+                const url = API_FOLDER + 'folder/' + packageId;
                 console.log('🔍 Fetching:', url);
                 const detail = await fetchWithRetry(url);
                 console.log('✅ Got:', detail.name, '| remixes:', detail.remixes?.length || 0, '| packages:', detail.packages?.length || 0);
@@ -1690,7 +1690,7 @@ const firebaseConfig = {
                         if (item.packages || item.remixes) {
                             packData = item;
                         } else {
-                            packData = await fetchWithRetry(API_SLUG + item.slug);
+                            packData = await fetchWithRetry(API_SLUG + 'slug/' + item.slug);
                         }
                         
                         const processedPack = await processPackageRecursive(packData);
