--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@ const firebaseConfig = {
                     if (currentUserEmail) {
                         actionBtn = `<button onclick="downloadWithToken('${refId}', '${fileName}', this)" class="bg-blue-600/20 text-blue-400 px-6 py-2 rounded-lg text-[9px] font-black uppercase hover:bg-blue-600 hover:text-white transition-all">Descargar</button>`;
                     } else if (m.isFree) {
-                        actionBtn = `<button onclick="requestEmailForDownload('${refId}', '${fileName}', event)" class="bg-green-600/20 text-green-400 px-6 py-2 rounded-lg text-[9px] font-black uppercase hover:bg-green-600 hover:text-white transition-all">🆓 Gratis</button>`;
+                        actionBtn = `<button onclick="downloadWithToken('${refId}', '${fileName}', this)" class="bg-green-600/20 text-green-400 px-6 py-2 rounded-lg text-[9px] font-black uppercase hover:bg-green-600 hover:text-white transition-all">🆓 Gratis</button>`;
                     } else {
                         actionBtn = `<button onclick="switchToLogin()" class="bg-slate-700/20 text-slate-400 px-6 py-2 rounded-lg text-[9px] font-black uppercase hover:bg-slate-600 hover:text-white transition-all border border-slate-600">🔒 VIP</button>`;
                     }
@@ -1842,7 +1842,7 @@ if (data.remixes) {
             `;
         } else if (isFreePack) {
             actionButton = `
-                <button onclick="requestEmailForDownload('${refId}', '${fileName}', event)"
+                <button onclick="downloadWithToken('${refId}', '${fileName}', this)"
                    class="w-full md:w-auto bg-green-600 text-white px-10 py-4 rounded-xl text-[10px] font-black uppercase text-center hover:bg-green-700 transition-all">
                    🆓 Descargar Gratis
                 </button>
