--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PeruBPM Exclusive</title>
+    <!-- Vercel Analytics -->
+    <script>
+        window.va = window.va || function() { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <!-- ===============================
-SEO – PeruBPM Exclusive
-=============================== -->
+ SEO – PeruBPM Exclusive
+ =============================== -->
 <meta name="description" content="PeruBPM Exclusive es una plataforma privada para DJs con packs VIP, remixes latinos, remixes peruanos, video remixes, membresías DJ y contenido profesional actualizado constantemente.">
 
 <meta name="keywords" content="PeruBPM, PeruBPM Exclusive, packs DJ, remixes latinos, remixes peruanos, video remixes, DJ Perú, DJ latino, música para DJs, packs VIP DJ, remix mp4">
